--- a/.env
+++ b/.env
@@ -1,2 +1,4 @@
-REACT_APP_API=http://65.0.176.7:3030
+# REACT_APP_API=http://65.0.176.7:3030
+# REACT_APP_API=http://13.204.59.205:3030
 # REACT_APP_API=http://localhost:3030
+REACT_APP_API=https://api.azre.co.in
